Updated Chet image and modified company page

--- a/company.html
+++ b/company.html
@@ -128,7 +128,7 @@
         <article class="team-card" data-name="Chet Patel" data-role="Lead CRM Engineer" data-bio="Leads Dynamics/HubSpot/Salesforce architecture, data modeling, and workflow automation.">
           <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
             <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
-              <img src="images/john.jpg" alt="Chet Patel" style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
+              <img src="assets/Chet.png" alt="Chet Patel" style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
             </div>
             <h3>Chet Patel</h3>
             <p class="text-muted" style="color:#d4ddee;">MCTS, MCP CRM Engineer, PMP</p>
