--- a/index.html
+++ b/index.html
@@ -23,6 +23,57 @@
   <header class="site-header absolute-header">
     <div class="nav-container">
       <a href="index.html" class="logo">/* BlueGrass CodeWorks */</a>
+      <!-- Add this button inside .nav-container, next to/after .logo -->
+<button
+  class="hamburger"
+  aria-label="Open menu"
+  aria-controls="mobile-drawer"
+  aria-expanded="false"
+>
+  <span class="hamburger-box">
+    <span class="hamburger-inner"></span>
+  </span>
+</button>
+
+<!-- Mobile drawer (hidden by default) -->
+<nav id="mobile-drawer" class="mobile-drawer" aria-hidden="true">
+  <div class="mobile-drawer-inner">
+    <button class="drawer-close" aria-label="Close menu">×</button>
+
+    <!-- Mobile Expertise (simple collapsible) -->
+    <details class="mobile-exp">
+      <summary>Expertise</summary>
+      <div class="mobile-panels">
+        <a class="mobile-panel" href="crm-transformation.html">
+          <i class="fas fa-sync-alt" aria-hidden="true"></i>
+          <span>CRM for DIGITAL TRANSFORMATION</span>
+        </a>
+        <a class="mobile-panel" href="web-mobile-integration.html">
+          <i class="fas fa-mobile-alt" aria-hidden="true"></i>
+          <span>WEB and MOBILE Integration</span>
+        </a>
+        <a class="mobile-panel" href="ai-utilization.html">
+          <i class="fas fa-brain" aria-hidden="true"></i>
+          <span>AI Utilization</span>
+        </a>
+        <a class="mobile-panel" href="full-stack-development.html">
+          <i class="fas fa-code" aria-hidden="true"></i>
+          <span>Full Stack Development</span>
+        </a>
+      </div>
+    </details>
+
+    <a href="work.html" class="mobile-link">Work</a>
+    <a href="process.html" class="mobile-link">Our Process</a>
+    <a href="company.html" class="mobile-link">Company</a>
+    <a href="blog.html" class="mobile-link">Blog</a>
+
+    <a href="#" class="contact-btn mobile-cta" aria-label="Contact BlueGrass CodeWorks">
+      Contact Us
+    </a>
+  </div>
+</nav>
+
       <nav class="main-nav">
         <div class="nav-links">
           <div class="nav-item has-dropdown">
@@ -64,7 +115,8 @@
           <a href="blog.html">Blog</a>
         </div>
         <div class="contact-wrapper">
-          <a href="#" class="contact-btn">Contact Us</a>
+          <a href="#" class="contact-btn" aria-label="Contact BlueGrass CodeWorks">Contact Us</a>
+
         </div>
       </nav>
 
@@ -159,24 +211,7 @@
   <footer class="site-footer">
     <p>© 2025 All rights reserved. Designed in the HEAT in Scottsdale, AZ</p>
   </footer>
-  <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const expertiseToggle = document.getElementById('expertise-toggle');
-    const navItem = expertiseToggle.closest('.nav-item');
-
-    expertiseToggle.addEventListener('click', (e) => {
-      e.preventDefault();
-      navItem.classList.toggle('active');
-    });
-
-    // Close dropdown when clicking outside
-    document.addEventListener('click', (e) => {
-      if (!navItem.contains(e.target)) {
-        navItem.classList.remove('active');
-      }
-    });
-  });
-</script>
+<script src="site.js" defer></script>
 
 </body>
 </html>
