--- a/process.html
+++ b/process.html
@@ -15,38 +15,87 @@
   <header class="site-header absolute-header">
     <div class="nav-container">
       <a href="index.html" class="logo">/* BlueGrass CodeWorks */</a>
+      <button
+  class="hamburger"
+  aria-label="Open menu"
+  aria-controls="mobile-drawer"
+  aria-expanded="false"
+>
+  <span class="hamburger-box">
+    <span class="hamburger-inner"></span>
+  </span>
+</button>
+
+<!-- Mobile drawer (hidden by default) -->
+<nav id="mobile-drawer" class="mobile-drawer" aria-hidden="true">
+  <div class="mobile-drawer-inner">
+    <button class="drawer-close" aria-label="Close menu">×</button>
+
+    <!-- Mobile Expertise (simple collapsible) -->
+    <details class="mobile-exp">
+      <summary>Expertise</summary>
+      <div class="mobile-panels">
+        <a class="mobile-panel" href="crm-transformation.html">
+          <i class="fas fa-sync-alt" aria-hidden="true"></i>
+          <span>CRM for DIGITAL TRANSFORMATION</span>
+        </a>
+        <a class="mobile-panel" href="web-mobile-integration.html">
+          <i class="fas fa-mobile-alt" aria-hidden="true"></i>
+          <span>WEB and MOBILE Integration</span>
+        </a>
+        <a class="mobile-panel" href="ai-utilization.html">
+          <i class="fas fa-brain" aria-hidden="true"></i>
+          <span>AI Utilization</span>
+        </a>
+        <a class="mobile-panel" href="full-stack-development.html">
+          <i class="fas fa-code" aria-hidden="true"></i>
+          <span>Full Stack Development</span>
+        </a>
+      </div>
+    </details>
+
+    <a href="work.html" class="mobile-link">Work</a>
+    <a href="process.html" class="mobile-link">Our Process</a>
+    <a href="company.html" class="mobile-link">Company</a>
+    <a href="blog.html" class="mobile-link">Blog</a>
+
+    <a href="#" class="contact-btn mobile-cta" aria-label="Contact BlueGrass CodeWorks">
+      Contact Us
+    </a>
+  </div>
+</nav>
       <nav class="main-nav">
         <div class="nav-links">
           <div class="nav-item has-dropdown">
             <a href="#" id="expertise-toggle">Expertise <span class="dropdown-arrow">▾</span></a>
             <div class="dropdown-panel" id="expertise-dropdown">
               <div class="panel">
-                <a href="crm-transformation.html" title="CRM Transformation">
+                <a href="crm-transformation.html" title="Learn more about CRM Transformation">
                   <i class="fas fa-sync-alt"></i>
                 </a>
                 <h4>CRM for DIGITAL TRANSFORMATION</h4>
-                <p>Centralize relationships, automate workflows, and grow from one platform.</p>
+                <p>Centralize customer relationships, automate workflows, and drive growth through tailored CRM platforms — all from a single, unified solution.</p>
               </div>
               <div class="panel">
-                <a href="web-mobile-integration.html" title="Web & Mobile Integration">
+                <a href="web-mobile-integration.html" title="Explore Web and Mobile Integration">
                   <i class="fas fa-mobile-alt"></i>
                 </a>
                 <h4>WEB and MOBILE Integration</h4>
-                <p>Connect CRM, marketing, and apps for seamless engagement.</p>
+                <p>Connect your CRM, marketing, and backend systems to your website and mobile apps for seamless customer engagement.</p>
               </div>
               <div class="panel">
-                <a href="ai-utilization.html" title="AI Utilization">
+                <a href="ai-utilization.html" title="Explore AI Utilization">
                   <i class="fas fa-brain"></i>
                 </a>
                 <h4>AI Utilization</h4>
-                <p>Use ML and GenAI for predictions, insights, and efficiency.</p>
+                <p>Leverage machine learning and generative AI to improve predictions, customer insights, and process efficiency.</p>
               </div>
               <div class="panel">
-                <a href="full-stack-development.html" title="Full Stack Development">
+                <a href="full-stack-development.html" title="Explore Full Stack Development">
                   <i class="fas fa-code"></i>
                 </a>
                 <h4>Full Stack Development</h4>
-                <p>Unify systems end‑to‑end with robust integrations.</p>
+                <p>With Full Stack Development, you gain the ability to seamlessly integrate third-party systems into your CRM, creating a unified, end-to-end solution that supports your entire business workflow.</p>
               </div>
             </div>
           </div>
@@ -139,22 +188,6 @@
   <footer class="site-footer">
     <p>© 2025 All rights reserved. Designed in the HEAT in Scottsdale, AZ</p>
   </footer>
-
-  <script>
-    // Expertise dropdown
-    document.addEventListener('DOMContentLoaded', () => {
-      const expertiseToggle = document.getElementById('expertise-toggle');
-      if (expertiseToggle) {
-        const navItem = expertiseToggle.closest('.nav-item');
-        expertiseToggle.addEventListener('click', (e) => {
-          e.preventDefault();
-          navItem.classList.toggle('active');
-        });
-        document.addEventListener('click', (e) => {
-          if (!navItem.contains(e.target)) navItem.classList.remove('active');
-        });
-      }
-    });
-  </script>
+<script src="site.js" defer></script>
 </body>
 </html>
