added GLOW to BLUEGRASS CODEWORKS Index page to indicate that is the currrent page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Header INSIDE so it overlays video -->
   <header class="site-header absolute-header">
     <div class="nav-container">
-      <a href="index.html" class="logo">/* BlueGrass CodeWorks */</a>
+      <a href="index.html" class="logo glow-logo">/* BlueGrass CodeWorks */</a>
       <!-- Add this button inside .nav-container, next to/after .logo -->
 <button
   class="hamburger"
@@ -137,7 +137,7 @@
         True <span class="highlight-word">TRANSFORMATION</span> goes beyond modernization. It <span class="highlight-word">INTEGRATES</span> your years of operational <span class="highlight-word">WISDOM</span> with forward-thinking <span class="highlight-word">TECHNOLOGY</span> to deliver scalable, efficient systems that keep your business <span class="highlight-word">AGILE</span> in a rapidly changing world.
       </p>
       <div class="cta">
-        <a href="#" class="btn">Explore Our Work</a>
+        <a href="work.html#projects" class="btn">Explore Our Work</a>
         <a href="#" class="btn btn-outline">Let’s Talk</a>
       </div>
     </div>
