Updated Selected Extpertise styles

--- a/process.html
+++ b/process.html
@@ -129,7 +129,7 @@
   <main>
     <!-- PHASES -->
     <section id="phases" class="why-crm light-theme">
-      <h2>Delivery Phases</h2>
+      <h2>Transformation Phases</h2>
       <div class="deliver-grid" style="margin-top:1.5rem;">
         <article class="card">
           <h3 class="card-highlight">DISCOVER</h3>
@@ -153,7 +153,7 @@
     <!-- PRINCIPLES -->
     <section class="why-crm">
       <h2>Principles We Work By</h2>
-      <p>Simple > complex. Outcomes > outputs. Transparency > surprises. We make tradeoffs explicit and measure what matters.</p>
+      <p>Simple > Complex. Outcomes > Outputs. Transparency > Suprises. We make tradeoffs explicit and measure what matters.</p>
     </section>
 
     <!-- ENGAGEMENT MODELS -->
