bunch of changes to look and feel

--- a/work.html
+++ b/work.html
@@ -140,55 +140,79 @@
       </div>
 
       <!-- PROJECT GRID -->
-      <div class="deliver-grid" id="projectGrid" style="margin-top:2rem;">
-        <!-- Project 1 -->
-        <article class="card project" data-tags="crm integration">
-          <h3 class="card-highlight">Unified CRM Rollout</h3>
-          <p>Replaced fragmented tooling with a single CRM, automated workflows, and trained cross-functional teams. 
-          <br><strong>Stack:</strong> Dynamics/Power Platform, Azure Functions, Service Bus</p>
-          <a href="#" class="learn-more">Read more</a>
-        </article>
+<!-- PROJECT GRID -->
+<div class="deliver-grid" id="projectGrid" style="margin-top:2rem;">
+  <!-- Project 1 -->
+  <article class="card project" data-tags="crm integration">
+    <h3 class="card-highlight">UNIFIED CRM</h3>
+    <p>Replaced fragmented tooling with a single CRM, automated workflows, and trained cross-functional teams.</p>
+    <div class="stack-icons">
+      <i class="fa-solid fa-users-gear" title="CRM"></i>
+      <i class="fa-solid fa-globe" title="Web"></i>
+      <i class="fa-solid fa-mobile-alt" title="Mobile"></i>
+      <i class="fa-solid fa-code" title="Full Stack"></i>
+    </div>
+    <a href="#" class="learn-more">Read more</a>
+  </article>
 
-        <!-- Project 2 -->
-        <article class="card project" data-tags="integration fullstack">
-          <h3 class="card-highlight">Web + Mobile Integration</h3>
-          <p>Connected marketing site + mobile app to CRM with SSO and real-time data sync.
-          <br><strong>Stack:</strong> Next.js, React Native, OAuth, GraphQL Gateway</p>
-          <a href="#" class="learn-more">Read more</a>
-        </article>
+  <!-- Project 2 -->
+  <article class="card project" data-tags="integration fullstack">
+    <h3 class="card-highlight">WEB + MOBILE</h3>
+    <p>Connected marketing site + mobile app to CRM with SSO and real-time data sync.</p>
+    <div class="stack-icons">
+      <i class="fa-solid fa-globe" title="Web"></i>
+      <i class="fa-solid fa-mobile-alt" title="Mobile"></i>
+      <i class="fa-solid fa-code" title="Full Stack"></i>
+    </div>
+    <a href="#" class="learn-more">Read more</a>
+  </article>
 
-        <!-- Project 3 -->
-        <article class="card project" data-tags="ai crm">
-          <h3 class="card-highlight">AI-Assisted Sales Ops</h3>
-          <p>Tagging, lead scoring, and forecasting with GenAI prompts grounded in CRM data.
-          <br><strong>Stack:</strong> Azure OpenAI, Functions, Dataverse</p>
-          <a href="#" class="learn-more">Read more</a>
-        </article>
+  <!-- Project 3 -->
+  <article class="card project" data-tags="ai crm">
+    <h3 class="card-highlight">AI TAGGING</h3>
+    <p>Tagging, lead scoring, and forecasting with GenAI prompts grounded in CRM data.</p>
+    <div class="stack-icons">
+      <i class="fa-solid fa-brain" title="AI"></i>
+      <i class="fa-solid fa-code" title="Full Stack"></i>
+    </div>
+    <a href="#" class="learn-more">Read more</a>
+  </article>
 
-        <!-- Project 4 -->
-        <article class="card project" data-tags="fullstack">
-          <h3 class="card-highlight">Custom Portal</h3>
-          <p>Self-service customer portal with payments, support, and content gating.
-          <br><strong>Stack:</strong> Node/Express, Postgres, Stripe, Vue</p>
-          <a href="#" class="learn-more">Read more</a>
-        </article>
+  <!-- Project 4 -->
+  <article class="card project" data-tags="fullstack">
+    <h3 class="card-highlight">CUSTOM PORTAL</h3>
+    <p>Self-service customer portal with payments, support, and content gating.</p>
+    <div class="stack-icons">
+      <i class="fa-solid fa-globe" title="Web"></i>
+      <i class="fa-solid fa-code" title="Full Stack"></i>
+    </div>
+    <a href="#" class="learn-more">Read more</a>
+  </article>
 
-        <!-- Project 5 -->
-        <article class="card project" data-tags="integration">
-          <h3 class="card-highlight">Data Pipeline Modernization</h3>
-          <p>Batch → event-driven architecture, observability, and retryable workflows.
-          <br><strong>Stack:</strong> Kafka, Azure Service Bus, Snowflake</p>
-          <a href="#" class="learn-more">Read more</a>
-        </article>
+  <!-- Project 5 -->
+  <article class="card project" data-tags="integration">
+    <h3 class="card-highlight">SERVICE BUS</h3>
+    <p>Batch → event-driven architecture, observability, and retryable workflows.</p>
+    <div class="stack-icons">
+      <i class="fa-solid fa-users-gear" title="CRM"></i>
+      <i class="fa-solid fa-code" title="Full Stack"></i>
+    </div>
+    <a href="#" class="learn-more">Read more</a>
+  </article>
 
-        <!-- Project 6 -->
-        <article class="card project" data-tags="crm fullstack">
-          <h3 class="card-highlight">Support Experience Revamp</h3>
-          <p>Case deflection, SLA automation, and knowledge base UX overhaul.
-          <br><strong>Stack:</strong> Salesforce Service Cloud, LWC</p>
-          <a href="#" class="learn-more">Read more</a>
-        </article>
-      </div>
+  <!-- Project 6 -->
+  <article class="card project" data-tags="crm fullstack">
+    <h3 class="card-highlight">AUTOMATION</h3>
+    <p>Case deflection, SLA automation, and knowledge base UX overhaul.</p>
+    <div class="stack-icons">
+      <i class="fa-solid fa-users-gear" title="CRM"></i>
+      <i class="fa-solid fa-globe" title="Web"></i>
+      <i class="fa-solid fa-code" title="Full Stack"></i>
+    </div>
+    <a href="#" class="learn-more">Read more</a>
+  </article>
+</div>
+
     </section>
 
     <!-- TESTIMONIAL STRIP -->
