--- a/web-mobile-integration.html
+++ b/web-mobile-integration.html
@@ -36,7 +36,7 @@
       <summary>Expertise</summary>
       <div class="mobile-panels">
         <a class="mobile-panel" href="crm-transformation.html">
-          <i class="fas fa-sync-alt" aria-hidden="true"></i>
+          <i class="fas fa-users-gear" aria-hidden="true"></i>
           <span>CRM for DIGITAL TRANSFORMATION</span>
         </a>
         <a class="mobile-panel" href="web-mobile-integration.html">
@@ -71,7 +71,7 @@
             <div class="dropdown-panel" id="expertise-dropdown">
               <div class="panel" data-page="crm-transformation.html">
                 <a href="crm-transformation.html" title="CRM Transformation">
-                  <i class="fas fa-sync-alt"></i>
+                  <i class="fas fa-users-gear"></i>
                 </a>
                 <h4>CRM for DIGITAL TRANSFORMATION</h4>
                 <p>Centralize customer relationships, automate workflows, and drive growth through tailored CRM platforms.</p>
