--- a/work.html
+++ b/work.html
@@ -158,7 +158,7 @@
   <!-- Project 2 -->
   <article class="card project" data-tags="integration fullstack">
     <h3 class="card-highlight">WEB + MOBILE</h3>
-    <p>Connected marketing site + mobile app to CRM with SSO and real-time data sync.</p>
+    <p>Integrated web and mobile with the CRM, establishing a single source of truth and delivering a unified customer experience across all channels</p>
     <div class="stack-icons">
       <i class="fa-solid fa-globe" title="Web"></i>
       <i class="fa-solid fa-mobile-alt" title="Mobile"></i>
@@ -170,7 +170,7 @@
   <!-- Project 3 -->
   <article class="card project" data-tags="ai crm">
     <h3 class="card-highlight">AI TAGGING</h3>
-    <p>Tagging, lead scoring, and forecasting with GenAI prompts grounded in CRM data.</p>
+    <p>Implemented AI-powered tagging of learning content, enabling automation, consistency, and rapid classification for streamlined knowledge management</p>
     <div class="stack-icons">
       <i class="fa-solid fa-brain" title="AI"></i>
       <i class="fa-solid fa-code" title="Full Stack"></i>
@@ -181,7 +181,7 @@
   <!-- Project 4 -->
   <article class="card project" data-tags="fullstack">
     <h3 class="card-highlight">CUSTOM PORTAL</h3>
-    <p>Self-service customer portal with payments, support, and content gating.</p>
+    <p>Launched a customer portal with self-service and contactless communication, empowering customers to complete tasks independently while boosting staff efficiency.</p>
     <div class="stack-icons">
       <i class="fa-solid fa-globe" title="Web"></i>
       <i class="fa-solid fa-code" title="Full Stack"></i>
@@ -192,7 +192,7 @@
   <!-- Project 5 -->
   <article class="card project" data-tags="integration">
     <h3 class="card-highlight">SERVICE BUS</h3>
-    <p>Batch → event-driven architecture, observability, and retryable workflows.</p>
+    <p>Implemented a Service Bus for guaranteed message delivery to third-party integrations, ensuring accurate, error-free data exchange between CRM downstream systems.</p>
     <div class="stack-icons">
       <i class="fa-solid fa-users-gear" title="CRM"></i>
       <i class="fa-solid fa-code" title="Full Stack"></i>
@@ -203,7 +203,7 @@
   <!-- Project 6 -->
   <article class="card project" data-tags="crm fullstack">
     <h3 class="card-highlight">AUTOMATION</h3>
-    <p>Case deflection, SLA automation, and knowledge base UX overhaul.</p>
+    <p>Deployed task and job scheduling automation, enabling common business processes to run automatically with real-time dashboard feedback and comprehensive audit trails.</p>
     <div class="stack-icons">
       <i class="fa-solid fa-users-gear" title="CRM"></i>
       <i class="fa-solid fa-globe" title="Web"></i>
