--- a/company.html
+++ b/company.html
@@ -163,7 +163,7 @@
 
       <div class="team-grid" style="grid-template-columns:repeat(auto-fit,minmax(240px,1fr));">
         <!-- Virgil -->
-        <article class="team-card" data-name="Virgil Prewitt" data-role="CEO &amp; Founder" data-bio="Founder and solutions architect focused on CRM-led transformation, integrations, and enterprise delivery.">
+        <article class="team-card" data-name="Virgil Prewitt" data-role="CTO &amp; Full Stack / AI" data-bio="Founder and solutions architect focused on CRM-led transformation, integrations, and enterprise delivery.">
           <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
             <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
               <img src="assets/virgilprewitt.jpg" alt="Virgil Prewitt" style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
@@ -185,7 +185,7 @@
         </article>
 
         <!-- Ted -->
-        <article class="team-card" data-name="Ted Klingenberg" data-role="UI/UX, Web, Mobile" data-bio="Design systems and full-stack web/mobile delivery with performance and accessibility baked in.">
+        <article class="team-card" data-name="Ted Klingenberg" data-role="UI/UX Design, Web, Mobile" data-bio="Design systems and full-stack web/mobile delivery with performance and accessibility baked in.">
           <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
             <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
               <img src="assets/tedk.jpg" alt="Ted Klingenberg" style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
