--- a/company.html
+++ b/company.html
@@ -174,7 +174,7 @@
         </article>
 
         <!-- Chet -->
-        <article class="team-card" data-name="Chet Patel" data-role="Lead CRM Engineer" data-bio="Leads Dynamics/HubSpot/Salesforce architecture, data modeling, and workflow automation.">
+        <article class="team-card" data-name="Chet Patel" data-role="MCTS, MCP CRM Engineer, PMP" data-bio="Leads Dynamics/HubSpot/Salesforce architecture, data modeling, and workflow automation.">
           <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
             <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
               <img src="assets/Chet.png" alt="Chet Patel" style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
