--- a/company.html
+++ b/company.html
@@ -208,6 +208,20 @@
             <p class="text-muted" style="color:#d4ddee;">UI Developer</p>
           </div>
         </article>
+        <!-- Candace -->
+        <article class="team-card" 
+                data-name="Candace Prewitt" 
+                data-role="PMP, Business Analyst" 
+                data-bio="Business Analyst with PMP certification, specializing in requirements gathering, process improvement, and CRM transformation delivery.">
+          <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
+            <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
+              <img src="assets/candaceprewitt.jpg" alt="Candace Prewitt" 
+                  style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
+            </div>
+            <h3>Candace Prewitt</h3>
+            <p class="text-muted" style="color:#d4ddee;">PMP, Business Analyst</p>
+          </div>
+        </article>
       </div>
     </section>
   </main>
