--- a/company.html
+++ b/company.html
@@ -180,7 +180,7 @@
               <img src="assets/Chet.png" alt="Chet Patel" style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
             </div>
             <h3>Chet Patel</h3>
-            <p class="text-muted" style="color:#d4ddee;">MCTS, MCP CRM Engineer, PMP</p>
+            <p class="text-muted" style="color:#d4ddee;">MCTS, MCP CRM Engineer</p>
           </div>
         </article>
 
