added cost page, updata company page with candace and emily

--- a/company.html
+++ b/company.html
@@ -56,6 +56,7 @@
 
     <a href="work.html" class="mobile-link">Work</a>
     <a href="process.html" class="mobile-link">Our Process</a>
+        <a href="cost.html" class="mobile-link">Cost</a>
     <a href="company.html" class="mobile-link">Company</a>
     <a href="blog.html" class="mobile-link">Blog</a>
 
@@ -101,6 +102,7 @@
           </div>
           <a href="work.html">Work</a>
           <a href="process.html">Our Process</a>
+          <a href="cost.html">Cost</a>
           <a href="company.html" class="active">Company</a>
           <a href="blog.html">Blog</a>
         </div>
@@ -155,75 +157,111 @@
       </p>
     </section>
 
+<!-- TEAM -->
+<section id="team" class="team-section">
+  <h2>Our Team</h2>
+  <p>Small, senior, and hands-on. Click a teammate to learn more.</p>
 
-    <!-- TEAM -->
-    <section id="team" class="team-section">
-      <h2>Our Team</h2>
-      <p>Small, senior, and hands-on. Click a teammate to learn more.</p>
+  <div class="team-grid">
+<!-- Virgil -->
+<article class="team-card" 
+        data-name="Virgil Prewitt" 
+        data-role="Enterprise Architect, Cloud Architectures" 
+        data-bio="Enterprise Architect specializing in cloud architectures and engineering transformative software solutions that drive business growth, scalability, and innovation.">
+  <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
+    <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
+      <img src="assets/virgilprewitt.jpg" alt="Virgil Prewitt" 
+           style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
+    </div>
+    <h3>Virgil Prewitt</h3>
+    <p class="text-muted" style="color:#d4ddee;">Enterprise Architect / Cloud Architectures</p>
+  </div>
+</article>
 
-      <div class="team-grid" style="grid-template-columns:repeat(auto-fit,minmax(240px,1fr));">
-        <!-- Virgil -->
-        <article class="team-card" data-name="Virgil Prewitt" data-role="CTO &amp; Full Stack / AI" data-bio="Founder and solutions architect focused on CRM-led transformation, integrations, and enterprise delivery.">
-          <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
-            <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
-              <img src="assets/virgilprewitt.jpg" alt="Virgil Prewitt" style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
-            </div>
-            <h3>Virgil Prewitt</h3>
-            <p class="text-muted" style="color:#d4ddee;">CTO &amp; Full Stack / AI</p>
-          </div>
-        </article>
 
-        <!-- Chet -->
-        <article class="team-card" data-name="Chet Patel" data-role="MCTS, MCP CRM Engineer, PMP" data-bio="Leads Dynamics/HubSpot/Salesforce architecture, data modeling, and workflow automation.">
-          <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
-            <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
-              <img src="assets/Chet.png" alt="Chet Patel" style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
-            </div>
-            <h3>Chet Patel</h3>
-            <p class="text-muted" style="color:#d4ddee;">MCTS, MCP CRM Engineer</p>
-          </div>
-        </article>
+<!-- Chet -->
+<article class="team-card" 
+        data-name="Chet Patel" 
+        data-role="CRM Expert, Business Transformations, MCTS, MCP CRM Engineer, PMP" 
+        data-bio="CRM expert specializing in business transformations, leading Dynamics/HubSpot/Salesforce architecture, data modeling, and workflow automation to deliver scalable and impactful solutions.">
+  <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
+    <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
+      <img src="assets/Chet.png" alt="Chet Patel" 
+           style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
+    </div>
+    <h3>Chet Patel</h3>
+    <p class="text-muted" style="color:#d4ddee;">CRM Expert &amp; Business Transformations</p>
+  </div>
+</article>
 
-        <!-- Ted -->
-        <article class="team-card" data-name="Ted Klingenberg" data-role="UI/UX Design, Web, Mobile" data-bio="Design systems and full-stack web/mobile delivery with performance and accessibility baked in.">
-          <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
-            <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
-              <img src="assets/tedk.jpg" alt="Ted Klingenberg" style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
-            </div>
-            <h3>Ted Klingenberg</h3>
-            <p class="text-muted" style="color:#d4ddee;">UI / UX Design, Web, Mobile</p>
-          </div>
-        </article>
-        <!-- Eric -->
-        <article class="team-card" 
-                data-name="Eric Prewitt" 
-                data-role="UI Developer" 
-                data-bio="Front-end specialist creating responsive, accessible, and high-performance user interfaces.">
-          <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
-            <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
-              <img src="assets/ericprewitt.jpg" alt="Eric Prewitt" 
-                  style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
-            </div>
-            <h3>Eric Prewitt</h3>
-            <p class="text-muted" style="color:#d4ddee;">UI Developer</p>
-          </div>
-        </article>
-        <!-- Candace -->
-        <article class="team-card" 
-                data-name="Candace Prewitt" 
-                data-role="PMP, Business Analyst" 
-                data-bio="Business Analyst with PMP certification, specializing in requirements gathering, process improvement, and CRM transformation delivery.">
-          <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
-            <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
-              <img src="assets/candaceprewitt.jpg" alt="Candace Prewitt" 
-                  style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
-            </div>
-            <h3>Candace Prewitt</h3>
-            <p class="text-muted" style="color:#d4ddee;">PMP, Business Analyst</p>
-          </div>
-        </article>
+
+    <!-- Ted -->
+    <article class="team-card" 
+            data-name="Ted Klingenberg" 
+            data-role="UI/UX Design, Web & Mobile Development" 
+            data-bio="UI designer and front-end developer specializing in intuitive interfaces, responsive web and mobile applications, and creating seamless user experiences for both internal and external customers.">
+      <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
+        <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
+          <img src="assets/tedk.jpg" alt="Ted Klingenberg" 
+              style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
+        </div>
+        <h3>Ted Klingenberg</h3>
+        <p class="text-muted" style="color:#d4ddee;">UI / UX Design, Web &amp; Mobile</p>
       </div>
-    </section>
+    </article>
+
+
+
+<!-- Eric -->
+<article class="team-card" 
+        data-name="Eric Prewitt" 
+        data-role="UI Developer, Transformative User Experience" 
+        data-bio="Front-end specialist creating responsive, accessible, and high-performance interfaces, with a focus on delivering transformative user experiences across web and mobile platforms.">
+  <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
+    <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
+      <img src="assets/ericprewitt.jpg" alt="Eric Prewitt" 
+           style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
+    </div>
+    <h3>Eric Prewitt</h3>
+    <p class="text-muted" style="color:#d4ddee;">UI Developer / User Experience</p>
+  </div>
+</article>
+
+
+    <!-- Candace -->
+    <article class="team-card" 
+            data-name="Candace Prewitt" 
+            data-role="PMP, Project Management Professional" 
+            data-bio="Certified PMP specializing in project leadership, scope management, scheduling, and stakeholder communication to ensure successful delivery of enterprise initiatives.">
+      <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
+        <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
+          <img src="assets/candaceprewitt.jpg" alt="Candace Prewitt" 
+              style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
+        </div>
+        <h3>Candace Prewitt</h3>
+        <p class="text-muted" style="color:#d4ddee;">PMP</p>
+      </div>
+    </article>
+
+
+    <!-- Emily -->
+    <article class="team-card" 
+            data-name="Emily Raines" 
+            data-role="Business Analyst" 
+            data-bio="Business Analyst focused on process improvement, requirements gathering, and delivering data-driven solutions.">
+      <div class="card" style="text-align:center; background: var(--primary-color); color: white; border:2px solid white;">
+        <div class="avatar" aria-hidden="true" style="display:grid;place-items:center;margin:0 auto 1rem;">
+          <img src="assets/emily.jpg" alt="Emily Raines" 
+              style="width:96px;height:96px;border-radius:9999px;border:2px solid white;object-fit:cover;"/>
+        </div>
+        <h3>Emily Raines</h3>
+        <p class="text-muted" style="color:#d4ddee;">Business Analyst</p>
+      </div>
+    </article>
+  </div>
+</section>
+
+
   </main>
   <!-- Team Modal -->
 <div id="teamModal" class="modal" aria-hidden="true">
