--- a/process.html
+++ b/process.html
@@ -54,10 +54,12 @@
       </div>
     </details>
 
-    <a href="work.html" class="mobile-link">Work</a>
-    <a href="process.html" class="mobile-link">Our Process</a>
-    <a href="company.html" class="mobile-link">Company</a>
-    <a href="blog.html" class="mobile-link">Blog</a>
+    <a href="work.html">Work</a>
+    <a href="process.html">Our Process</a>
+    <a href="cost.html">Cost</a>
+    <a href="company.html">Company</a>
+    <a href="#">Blog</a>
+
 
     <a href="#" class="contact-btn mobile-cta" aria-label="Contact BlueGrass CodeWorks">
       Contact Us
@@ -101,6 +103,7 @@
           </div>
           <a href="work.html">Work</a>
           <a class="active" href="process.html">Our Process</a>
+          <a href="cost.html">Cost</a>
           <a href="company.html">Company</a>
           <a href="#">Blog</a>
         </div>
