--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
     <a href="work.html" class="mobile-link">Work</a>
     <a href="process.html" class="mobile-link">Our Process</a>
+        <a href="cost.html" class="mobile-link">Cost</a>
     <a href="company.html" class="mobile-link">Company</a>
     <a href="blog.html" class="mobile-link">Blog</a>
 
@@ -111,6 +112,7 @@
           </div>
           <a href="work.html">Work</a>
           <a href="process.html">Our Process</a>
+              <a href="cost.html">Cost</a>
           <a href="company.html">Company</a>
           <a href="blog.html">Blog</a>
         </div>
