--- a/work.html
+++ b/work.html
@@ -56,6 +56,7 @@
 
     <a href="work.html" class="mobile-link">Work</a>
     <a href="process.html" class="mobile-link">Our Process</a>
+        <a href="cost.html" class="mobile-link">Cost</a>
     <a href="company.html" class="mobile-link">Company</a>
     <a href="blog.html" class="mobile-link">Blog</a>
 
@@ -101,6 +102,7 @@
           </div>
           <a class="active" href="work.html">Work</a>
           <a href="process.html">Our Process</a>
+              <a href="cost.html">Cost</a>
           <a href="company.html">Company</a>
           <a href="blog.html">Blog</a>
         </div>
